updated html file

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <title>Yega Cho's Portfolio</title>
          <meta charset="UTF-8" />
          <meta name="viewport" content="width=device-width, initial-scale=1" />
-         <link rel="stylesheet" type="text/css" href="./assets/css/style.css" />
+         <link rel="stylesheet" type="text/css" href="./style.css" />
     </head>
     <body>
         <header>
@@ -25,6 +25,18 @@
                 <h2>Contact Me</h2>
                 <h2>Resume</h2>
             </aside>
+
+            <section>
+                <h2>Projects</h2>
+                <h2>Resume</h2>
+            </section>
         </main>
+
+        <footer>
+            <h3>
+
+            </h3>
+        </footer>
     </body>
-</html>
+</html> 
+
